--- a/ProjetAnnuel/ProjetAnnuel/Saved/Config/Windows/SourceControlSettings.ini
+++ b/ProjetAnnuel/ProjetAnnuel/Saved/Config/Windows/SourceControlSettings.ini
@@ -1,1 +1,10 @@
+[SourceControl.SourceControlSettings]
+Provider=Subversion
+
+[SubversionSourceControl.SubversionSourceControlSettings]
+Repository="https://github.com/VisualPi/LOQUET_TIXIER_WATHTHUHEWA_Projet_Annuel/trunk/ProjetAnnuel/ProjetAnnuel"
+UserName=VisualPi
+LabelsRoot=
+ExecutableLocation=
+
 
