--- a/ProjetAnnuel/ProjetAnnuel/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjetAnnuel/ProjetAnnuel/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -57,7 +57,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Engine/Maps/Templates/Template_Default
 
 [ModuleFileTracking]
-ProjetAnnuel.TimeStamp=2015.10.20-13.56.47
+ProjetAnnuel.TimeStamp=2015.10.20-14.10.29
 ProjetAnnuel.LastCompileMethod=External
 PakFile.TimeStamp=2015.10.01-07.55.56
 PakFile.LastCompileMethod=Unknown
@@ -457,7 +457,7 @@ ExternalImagePicker.TimeStamp=2015.09.30-15.08.57
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -521,7 +521,21 @@ InputSettings.Console=True
 InputSettings.Bindings=True
 
 [DetailPropertyExpansion]
-InputSettings="Object.Console.ConsoleKeys" 
-Object="Object.Console.ConsoleKeys" 
+InputSettings=Object.Console.ConsoleKeys
+Object=Object.Console.ConsoleKeys
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bEnableSourceControlCompatabilityCheck=True
+bMonitorContentDirectories=True
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint=,Wildcards=)
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnRestart=False
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
 
 
