Test de generation de map a partir d'une chaine de caractere de format 29*29

--- a/ProjetAnnuel/ProjetAnnuel/Saved/Config/Windows/SourceControlSettings.ini
+++ b/ProjetAnnuel/ProjetAnnuel/Saved/Config/Windows/SourceControlSettings.ini
@@ -1,5 +1,5 @@
 [SourceControl.SourceControlSettings]
-Provider=Subversion
+Provider=None
 
 [SubversionSourceControl.SubversionSourceControlSettings]
 Repository="https://github.com/VisualPi/LOQUET_TIXIER_WATHTHUHEWA_Projet_Annuel/trunk/ProjetAnnuel/ProjetAnnuel"
