Commit V2, revert a cette révision pour avoir l'ancien état.

--- a/ProjetAnnuel/ProjetAnnuel/Config/DefaultEngine.ini
+++ b/ProjetAnnuel/ProjetAnnuel/Config/DefaultEngine.ini
@@ -57,7 +57,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 EditorStartupMap=/Engine/Maps/Templates/Template_Default
 LocalMapOptions=
 TransitionMap=
-bUseSplitscreen=True
+bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
@@ -65,5 +65,4 @@ GameDefaultMap=/Engine/Maps/Entry
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/GameModes/ColorGameMode.ColorGameMode_C
 GlobalDefaultServerGameMode=None
-
 
