Commit du multi local avec inpu fonctionnels

--- a/ProjetAnnuel/ProjetAnnuel/Config/DefaultEngine.ini
+++ b/ProjetAnnuel/ProjetAnnuel/Config/DefaultEngine.ini
@@ -66,3 +66,6 @@ ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/GameModes/ColorGameMode.ColorGameMode_C
 GlobalDefaultServerGameMode=None
 
+[/Script/Engine.Engine]
+GameViewportClientClassName=/Script/ProjetAnnuel.LocalMPViewportClient
+
