--- a/ProjetAnnuel/ProjetAnnuel/Config/DefaultEngine.ini
+++ b/ProjetAnnuel/ProjetAnnuel/Config/DefaultEngine.ini
@@ -63,9 +63,9 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Engine/Maps/Entry
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Game/GameModes/ColorGameMode.ColorGameMode_C
+GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.Engine]
-GameViewportClientClassName=/Script/ProjetAnnuel.LocalMPViewportClient
+GameViewportClientClassName=/Script/Engine.GameViewportClient
 
