--- a/ProjetAnnuel/AI/Assembly-CSharp.csproj
+++ b/ProjetAnnuel/AI/Assembly-CSharp.csproj
@@ -53,6 +53,8 @@
      <Compile Include="Assets\Scripts\Class\PlayerInput.cs" />
      <Compile Include="Assets\Scripts\Class\PlayerIntention.cs" />
      <Compile Include="Assets\Scripts\Class\PlayerMove.cs" />
+     <Compile Include="Assets\Scripts\ColorGame\AiColorGameScript.cs" />
+     <Compile Include="Assets\Scripts\ColorGame\AiMoveColorGameScript.cs" />
      <Compile Include="Assets\Scripts\MakeActionsScript.cs" />
      <Compile Include="Assets\Scripts\MoveScript.cs" />
      <Compile Include="Assets\Scripts\PlayerCollisionScript.cs" />
